Finally, you can type episode titles into the searchbar to receive matching suggestions. A bug, where only summaries would be scanned, had been thwarting this until now.